--- a/FinalProjectGroup046-Wi23.ipynb
+++ b/FinalProjectGroup046-Wi23.ipynb
@@ -108,7 +108,7 @@
     "\n",
     "In order to solve the proposed problem of estimating minimum Hamming distance of a large dataset of input strings, our group chose to implement a Multi-Layer Perceptron Neural Network (MLP NN). The goal of any machine learning problem is to optimize the hyperparameters that ultimately maximize both the efficiency and accuracy of the model. In the context of this problem, we chose to change the sizes of the hidden layers of our network, the learning rate, as well as the L1 factor used to penalize the weights of the model. We repeatedly performed grid search over a small spread of hyperparameters for each of those values, manually increasing and decreasing the values in order to hone in on a smaller range of potential values that optimize the network.\n",
     "\n",
-    "The values that we ultimately selected for our model were hidden layer sizes of (320, 230, 64), a learning rate of 0.01 and λ (L1) of 2. Using these values, our model was able complete X amount in X seconds.\n",
+    "The values that we ultimately selected for our model were hidden layer sizes of (320, 230, 64), a learning rate of 0.01 and λ (L1) of 2. Using these values, our model was able iterate through 534,616,412 strings in a single second.\n",
     "\n",
     "\n",
     "### Other Algorithms Used\n",
@@ -187,9 +187,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Subsection 5 \n",
+    "### Evaluation of Our MLP NN\n",
     "\n",
-    "Maybe you do model selection again, but using a different kind of metric than before?"
+    "When evaluating our NN using the hyperparameters found using the fourth grid search - layer sizes of (320, 230, 64), learning rate of 0.01, and λ of 2 - our model was able to iterate through 4,0009 batches per second when transfering data between the GPU and CPU with batch sizes of 131,072 strings. On the machine we ran the algorithm on this resulted in 534,616,412 strings being processed in a single second."
    ]
   },
   {
