--- a/FinalProjectGroup046-Wi23.ipynb
+++ b/FinalProjectGroup046-Wi23.ipynb
@@ -122,7 +122,7 @@
     "\n",
     "The model that we selected to solve our proposed machine learning problem was a Multi-Layer Perceptron Neural Network (MLP NN). MLP NNs have a wide variety of application and can be used to solve many kinds of machine learning problems including classification, regression, and complex pattern recognition that can be difficult to solve using other algorithm types. In addition to its ability to solve complex problems, in most cases it is more computationally efficient than other models. For these reasons, we chose to implement this model to calculate the Hamming distance.\n",
     "\n",
-    "# Explain the structure of NN and put code below"
+    "The basic MLP model has three hidden layers as seen below and uses the ReLU activation function when moving between layers. The optimizer utilized in this NN was the Adam optimizer from pytorch. A scheduler was also used from the same library in order to speed up the conversion rates of the algorithm."
    ]
   },
   {
@@ -131,7 +131,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code for NN"
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "# Define the Multi-Layer Perceptron model\n",
+    "class MLP(nn.Module):\n",
+    "    def __init__(self, input_size, h1, h2, h3):\n",
+    "        super(MLP, self).__init__()\n",
+    "        self.input_size = input_size\n",
+    "        self.fc1 = nn.Linear(input_size, h1)\n",
+    "        self.fc2 = nn.Linear(h1, h2)\n",
+    "        self.fc3 = nn.Linear(h2, h3)\n",
+    "        self.fc4 = nn.Linear(h3, 1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = x.view(-1, self.input_size) # Flatten the input tensor\n",
+    "        x = torch.relu(self.fc1(x))\n",
+    "        x = torch.relu(self.fc2(x))\n",
+    "        x = torch.relu(self.fc3(x))\n",
+    "        x = self.fc4(x)\n",
+    "        return x\n",
+    "\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, 'min', patience=20, factor=0.1)\n",
+    "criterion_mse, criterion_l1 = torch.nn.MSELoss(), torch.nn.L1Loss()"
    ]
   },
   {
