updated eval metrics

--- a/FinalProjectGroup046-Wi23.ipynb
+++ b/FinalProjectGroup046-Wi23.ipynb
@@ -91,11 +91,7 @@
    "source": [
     "# Evaluation Metrics\n",
     "\n",
-    "In order to evaluate the accuracy of our model we will split our dataset of randomly generated strings into a test and training dataset. For the test dataset, we will use tradition methods to calculate the Hamming distance for each string in the dataset. Our metric will be calculating the average error between the predicted Hamming distance and the actual value. Our model will be considered accurate if it is both able to identify the correct Hamming distance in which the souliton model has a higher F-β score (to quantify accuracy) than the benchmark model, and it is computationally more efficient than traditional Hamming calculations on the same dataset.\n",
-    "\n",
-    "F-β score is given by (β)^2 * (precision * sensitivity)/((((β)^2) * precision) + sensitivity) \n",
-    "\n",
-    "More fundamentally, it is also vital to record and observe more elementary data classifiers; percision and sensitivity are to be used in the F-score. To better gauge an understanding of our Hamming distance algorithm, we also look at specificity and negative predictive value. This helps understand how well the solution model can identify and compare to the benchmark. Evaluation metrics directly taken from the testing and training section of the project are MSE(Mean Squared Error), classification accuracy, and runtime. We can observe and compare each of the metrics given in order to finaliz a decision to which model performs the best. In an ideal setting, the best-performing model would be able to be accurate and detect error, while being efficient in producing metrics.\n"
+    "In order to evaluate the accuracy of our model we will first use tradition methods to calculate the Hamming distance for each string in the dataset. The metrics for evaluating our model will be calculating the mean squared error (MSE) between the predicted Hamming distance and the actual value, classification accuracy, and runtime. We can observe and compare each of the metrics given in order to finaliz a decision to which model performs the best. In an ideal setting, the best-performing model would be able to be accurate and detect error, while being efficient in producing metrics.\n"
    ]
   },
   {
@@ -120,7 +116,7 @@
     "\n",
     "The model that we selected to solve our proposed machine learning problem was a Multi-Layer Perceptron Neural Network (MLP NN). MLP NNs have a wide variety of application and can be used to solve many kinds of machine learning problems including classification, regression, and complex pattern recognition that can be difficult to solve using other algorithm types. In addition to its ability to solve complex problems, in most cases it is more computationally efficient than other models. For these reasons, we chose to implement this model to calculate the Hamming distance.\n",
     "\n",
-    "The basic MLP model has three hidden layers as seen below and uses the ReLU activation function when moving between layers. The optimizer utilized in this NN was the Adam optimizer from pytorch. A scheduler was also used from the same library in order to speed up the conversion rates of the algorithm."
+    "The basic MLP model has three hidden layers as seen below and uses the ReLU activation function when moving between layers. The optimizer utilized in this NN was the Adam optimizer from pytorch. A scheduler was also used from the same library to allow the model to converge more efficiently."
    ]
   },
   {
