--- a/FinalProjectGroup046-Wi23.ipynb
+++ b/FinalProjectGroup046-Wi23.ipynb
@@ -64,7 +64,9 @@
     "# Data\n",
     "\n",
     "**1,000,000 observations for NN model** & **8 features** \n",
+    "\n",
     "*Not all obserations were used in all models; some were capped at 25,000 obseravtions due to estimated time needed to test a high amount of data points*\n",
+    "\n",
     " We source the English words from the open source WordSet<a name = \"wordset\"></a>[<sup>[4]</sup>](#wordsetnote) dictionary, and we generate training data ourselves by creating random strings with alphabet characters and using brute-force search to assign each string its corresponding minimum hamming distance label, relative to the WordSet dictionary. The critical features we are looking for in the dataset are the letters in combination to form a word in the dictionary. It's then this specific compination that will be compared to the string in the test data. We may choose to generate our random strings according to a letter frequency distribution or a bigram or trigram, or otherwise by randomly mutating random dictionary word strings to produce realistic use-case examples.\n",
     " \n",
     " Within our basic Random Forest model, the amount of data points is variable based on computation time. Our current iteration of the algorithm supports **25,000 observations** and we test variably, from 1,000 to 10,000, and upwards of 25,000 observations. The generated test set obseration size is dependent on computional ability, mkae more time to compute 25,000 observations than 1,000. An observation consists of one string with *n*-number characters (1 string of length *n*), in our code we use n = 8 to preliminarily test and n = 8 will be used for our solution. For our train and test dataset, we conduct one-hot encoding in order to obtain catagorical values, in this case to investigate loss er Epoch, and average loss. We manually 'mutate' words' characters to generate strings of *n* random charcters.\n"
@@ -206,7 +208,7 @@
    "source": [
     "### Evaluation of Our MLP NN\n",
     "\n",
-    "When evaluating our NN using the hyperparameters found using the fourth grid search - layer sizes of (320, 230, 64), learning rate of 0.01, and λ of 2 - our model was able to iterate through 4,0009 batches per second when transfering data between the GPU and CPU with batch sizes of 131,072 strings. On the machine we ran the algorithm on this resulted in 534,616,412 strings being processed in a single second."
+    "When evaluating our NN using the hyperparameters found using the fourth grid search - layer sizes of (320, 230, 64), learning rate of 0.01, and λ of 2 - our model was able to iterate through 4,009 batches per second when transfering data between the GPU and CPU with batch sizes of 131,072 strings. On the machine we ran the algorithm on this resulted in 534,616,412 strings being processed in a single second."
    ]
   },
   {
@@ -218,7 +220,8 @@
     "\n",
     "### Interpreting the result\n",
     "\n",
-    "OK, you've given us quite a bit of tech informaiton above, now its time to tell us what to pay attention to in all that.  Think clearly about your results, decide on one main point and 2-4 secondary points you want us to understand. Highlight HOW your results support those points.  You probably want 2-5 sentences per point.\n",
+    "Our main takeaway from our algorithm is recognizing the brevity of runtime using the neural network model. As denoted, more than 50 million strings were processed in on second. We see results in a fraction of the time, compared to our Random Tree or Ensemeble data from the 'Addtional Algorithms' file. \n",
+    "\n",
     "\n",
     "### Limitations\n",
     "\n",
