--- a/FinalProjectGroup046-Wi23.ipynb
+++ b/FinalProjectGroup046-Wi23.ipynb
@@ -63,13 +63,15 @@
    "source": [
     "# Data\n",
     "\n",
-    "**1,000,000 observations for NN model** & **8 features** \n",
+    "**1,000,000 observations** & **8 features** \n",
     "\n",
-    "*Not all obserations were used in all models; some were capped at 25,000 obseravtions due to estimated time needed to test a high amount of data points*\n",
+    "We sourced the English words (246590 of them) from the open source WordSet<a name = \"wordset\"></a>[<sup>[4]</sup>](#wordsetnote) dictionary.\n",
+    "These words were stored as one column in a text file with other data, so the first step was to just extract the words of length at most 8 characters (of which there were 134397), converting them all to lowercase.\n",
     "\n",
-    " We source the English words from the open source WordSet<a name = \"wordset\"></a>[<sup>[4]</sup>](#wordsetnote) dictionary, and we generate training data ourselves by creating random strings with alphabet characters and using brute-force search to assign each string its corresponding minimum hamming distance label, relative to the WordSet dictionary. The critical features we are looking for in the dataset are the letters in combination to form a word in the dictionary. It's then this specific compination that will be compared to the string in the test data. We may choose to generate our random strings according to a letter frequency distribution or a bigram or trigram, or otherwise by randomly mutating random dictionary word strings to produce realistic use-case examples.\n",
-    " \n",
-    " Within our basic Random Forest model, the amount of data points is variable based on computation time. Our current iteration of the algorithm supports **25,000 observations** and we test variably, from 1,000 to 10,000, and upwards of 25,000 observations. The generated test set obseration size is dependent on computional ability, mkae more time to compute 25,000 observations than 1,000. An observation consists of one string with *n*-number characters (1 string of length *n*), in our code we use n = 8 to preliminarily test and n = 8 will be used for our solution. For our train and test dataset, we conduct one-hot encoding in order to obtain catagorical values, in this case to investigate loss er Epoch, and average loss. We manually 'mutate' words' characters to generate strings of *n* random charcters.\n"
+    "Next, we had to create the data, which are strings and their associated minimum hamming distances to this list of words.\n",
+    "To generate each string, we would randomly (uniformly) select an English word from the list, and then randomly (uniformly) choose how many character substitutions to make,\n",
+    "between 0 and 8, and then (randomly) select that many characters from the word and mutate them into a new (uniformly random) character. The idea here is that we want the algorithm\n",
+    "not to overfit towards low or high hamming distances in particular, or towards near-english words (so e.g. 1/9 of the generated words were totally ran"
    ]
   },
   {
@@ -220,7 +222,9 @@
     "\n",
     "### Interpreting the result\n",
     "\n",
-    "Our main takeaway from our algorithm is recognizing the brevity of runtime using the neural network model. As denoted, more than 50 million strings were processed in on second. We see results in a fraction of the time, compared to our Random Tree or Ensemeble data from the 'Addtional Algorithms' file. \n",
+    "Our main takeaway from our algorithm is recognizing the brevity of runtime using the neural network model. As denoted, more than 50 million strings were processed in on second. We see results in a fraction of the time, compared to our Random Forest or Ensemeble data from the 'Addtional Algorithms' file. \n",
+    "\n",
+    "For our MSE Evaluation Metric, 0.348 was the best MSE for the test set in our neural network. Similarly, from our prelimiary results in our previous models, this is a significant decrease from upwards of 0.98 in our Random Forest model.\n",
     "\n",
     "\n",
     "### Limitations\n",
