--- a/FinalProjectGroup046-Wi23.ipynb
+++ b/FinalProjectGroup046-Wi23.ipynb
@@ -210,7 +210,9 @@
    "source": [
     "### Evaluation of Our MLP NN\n",
     "\n",
-    "When evaluating our NN using the hyperparameters found using the fourth grid search - layer sizes of (320, 230, 64), learning rate of 0.01, and λ of 2 - our model was able to iterate through 4,009 batches per second when transfering data between the GPU and CPU with batch sizes of 131,072 strings. On the machine we ran the algorithm on this resulted in 534,616,412 strings being processed in a single second."
+    "When evaluating our NN using the hyperparameters found using the fourth grid search - layer sizes of (320, 230, 64), learning rate of 0.01, and λ of 2 - our model was able to iterate through 4,009 batches per second when transfering data between the GPU and CPU with batch sizes of 131,072 strings. On the machine we ran the algorithm on this resulted in 534,616,412 strings being processed in a single second.\n",
+    "\n",
+    "The 2nd fastest method we could find, locality sensitive hashing, could handle about 10,000 words per second"
    ]
   },
   {
